# bodhibuildscripts

./: README.md  build.sh  genericbuild.sh  getdeps.sh  installdeps.sh  mygenericbuild.sh
3.0.0/: buildrelease.sh  e17build.sh  e18build.sh  e19build.sh  e19build.sh~  e20build.sh  econnmanbuild.sh  ecrirebuild.sh  edbusbuild.sh  eflbuild.sh  efxbuild.sh  elementarybuild.sh  emotion-generic-playersbuild.sh  enlightenmentbuild.sh  ephotobuild.sh  epulsebuild.sh  epulsebuild.sh~  evas-generic-loadersbuild.sh  ewebuild.sh  genericbuild.sh  placesbuild.sh  python-eflbuild.sh  terminologybuild.sh
3.0.0/archive/: edbusbuild.sh  efxbuild.sh  elementarybuild.sh  emotion-generic-playersbuild.sh  ephotobuild.sh  epulsebuild.sh  ewebuild.sh  placesbuild.sh  terminologybuild.sh
buildscripts/: buildemods.sh
controlfiles/azy/: control
controlfiles/calendar/: control
controlfiles/comp-scale/: control
controlfiles/comp-scale-e18/: control~
controlfiles/desksanity/: control
controlfiles/deskshow/: control
controlfiles/e17/: control
controlfiles/e18/: control
controlfiles/e18-dbg/: control  control~  rules~
controlfiles/e19/: control  postinst
controlfiles/e20/: control  postinst
controlfiles/e21/: control  rules
controlfiles/e22/: control  rules
controlfiles/ecomp/: control
controlfiles/ecore/: control
controlfiles/edbus/: control
controlfiles/edje/: control
controlfiles/eet/: control
controlfiles/efl/: control  control~  efl.deb  rules  rules~
controlfiles/efl-dbg/: control  control~  rules
controlfiles/efm-nav/: control
controlfiles/efreet/: control
controlfiles/efx/: control
controlfiles/eina/: control
controlfiles/elementary/: control  control~  rules
controlfiles/elementary-dbg/: control  rules  rules~
controlfiles/elfe-e18/: control
controlfiles/elsa/: rules
controlfiles/emotion-generic-players/: control
controlfiles/empower/: control
controlfiles/enjoy/: control
controlfiles/enki/: control
controlfiles/enlightenment/: control  control~  postinst  rules  rules~
e18modules/: comp-scalebuild.sh  elfebuild.sh  forecastsbuild.sh
patches/: Makefile_wizard-e17.am  bodhi_e17.diff  bodhi_e19.diff  e_int_menus-e19.c
patches/e17/wizard/wizard/: Makefile.am  page_020.c
patches/e17/wizard/wizard/data/.svn/: all-wcprops
releasescripts/: e18build.sh  e18build.sh~  e19build.sh  e19build.sh~  eflbuild.sh  eflbuild.sh~  elementarybuild.sh  elementarybuild.sh~  emotion-generic-playersbuild.sh  enlightenmentbuild.sh  eobj_20121218-1_i386.deb  python-eflbuild.sh
(+193 files in other folders)
